# software-development

./: ADMINISTRATION.md  ADVANCED_CI_CD.md  BEST_PRACTICE.md  CI.md  CIYAML.md  CI_CD_TEST.md  CI_TEST.md  CONTINUOUS_DEPLOYMENT.md  CONTINUOUS_INTEGRATION.md  DOCUMENTATION.md  GITHUB_ACTIONS.md  GITIGNORE.md  IDE.md  INIT.md  LICENCING.md  LINTING.md  ML.md  PACKAGING.md  PROJECT_STRUCTURE.md  PROJECT_TOML.md  PURPOSE.md  QUICK_SETUP.md  README.md  REQU.md  SETUP.md  TEST.md  UNIT_TESTING.md  VERSION_CONTROL.md  delte.ipynb  new.md
template/: .gitignore  README.md  pyproject.toml  setup.cfg
template/.github/workflow/: ci.yml
template/project_xyz/: example.py
template/tests/: test_example.py
